[metadata]
name = plover-ibus
version = 0.0.0
author = user202729
description = 
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-ibus
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
py_modules = plover_ibus
include_package_data = True

[options.entry_points]
plover.extension =
	ibus = plover_ibus.plover:Main
plover.command =
	ibus_str = plover_ibus.command:ibus_send_string
	ibus_combo = plover_ibus.command:ibus_send_key_combination
